<resources>
    <string name="app_name">骰寶紀錄</string>
    <string name="big">大</string>
    <string name="small">小</string>
    <string name="killing">殺</string>
    <string name="point_one">一點</string>
    <string name="point_two">兩點</string>
    <string name="point_three">三點</string>
    <string name="point_four">四點</string>
    <string name="point_five">五點</string>
    <string name="point_six">六點</string>
    <string name="add">新增</string>
    <string name="clear">清除</string>
</resources>